--- a/css/style.css
+++ b/css/style.css
@@ -1776,13 +1776,13 @@ hamburger
   overflow: hidden;
   margin: 1.5rem auto;
   overflow: hidden;
-  border-radius: 5px;
+  border-radius: 0.5rem;
 }
 @media (min-width: 768px) {
   #projects .projects .all-projects .project-item {
     height: 350px;
     width: 90%;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     flex-direction: row;
     margin: 1.5em auto;
     position: relative;
@@ -1792,7 +1792,7 @@ hamburger
   }
 }
 #projects .projects .all-projects .project-item .project-tile {
-  padding: 1.5em;
+  padding: 1.5rem 1rem;
   flex-basis: 50%;
   width: 100%;
   height: 100%;
@@ -1811,16 +1811,16 @@ hamburger
   }
 }
 #projects .projects .all-projects .project-item .project-tile h1 {
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   width: 100%;
   color: #fff;
   font-weight: 500;
   text-transform: capitalize;
   line-height: 1em;
   font-family: "Kanit", sans-serif;
-  letter-spacing: 0.05em;
-  margin-bottom: 0.5em;
-  padding-bottom: 0.5em;
+  letter-spacing: 0.05rem;
+  margin-bottom: 1rem;
+  padding-bottom: 0.5rem;
   border-bottom: 1px dashed #ead2a1;
 }
 @media (min-width: 1024px) {
@@ -1830,50 +1830,57 @@ hamburger
 }
 #projects .projects .all-projects .project-item .project-tile h2 {
   font-size: 1rem;
-  line-height: 1.3;
+  line-height: 1.5;
   font-weight: 500;
-  margin: 0.8em 0;
+  margin: 0.5rem 0;
   text-transform: capitalize;
   color: #f4f4f4;
   transition: 0.3s;
 }
 #projects .projects .all-projects .project-item .project-tile p {
-  font-size: 1rem;
+  font-size: 0.95rem;
   font-weight: 300;
   color: #ffff;
   margin: 0.5rem 0;
 }
+@media (min-width: 768px) {
+  #projects .projects .all-projects .project-item .project-tile p {
+    font-size: 1rem;
+  }
+}
 #projects .projects .all-projects .project-item .project-tile a {
   color: #fff;
-  background: #161616;
+  background: #20262e;
   margin: 0.5em 0 0.5em;
   padding: 0.5em;
   width: 100%;
   border: none;
   outline: none;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   transition: all 0.3s ease;
   border: 2px solid #ead2a1;
 }
 #projects .projects .all-projects .project-item .project-tile a i {
   transition: 0.2s;
   color: #ead2a1;
-  font-size: 0.65rem;
-  padding: 0.5rem;
-  margin: 1em 0 0.5em 0;
+  font-size: 0.8rem;
+  padding: 0.5rem 0;
 }
 #projects .projects .all-projects .project-item .project-tile a i::after {
-  content: "view";
-  text-transform: lowercase;
+  content: "view page";
+  font-family: "Kanit", sans-serif;
   letter-spacing: 0.15rem;
+  text-transform: capitalize;
   color: #f4f4f4;
-  font-weight: 300;
+  font-weight: 200;
+  font-size: 0.9rem;
   transition: 0.3s;
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
   border-radius: 1rem;
-  padding: 0.5em 1em;
-  opacity: 0;
-  box-shadow: inset 1px 1px 3px #fffa, inset -1px -1px 3px #000a;
+  padding: 0.25rem 0.5rem;
+  margin-left: 0.5rem;
+  opacity: 1;
   transition: 0.3s ease;
 }
 #projects .projects .all-projects .project-item .project-tile a:hover h2 {
