--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -55,7 +55,7 @@
                 @media (min-width: 768px) {
                     height: 350px;
                     width: 90%;
-                    border-radius: 5px;
+                    border-radius: .5rem;
                     flex-direction: row;
                     margin: 1.5em auto;
                     position: relative;
@@ -67,7 +67,7 @@
                 // end of project items on desktop : row
                 margin: 1.5rem auto;
                 overflow: hidden;
-                border-radius: 5px;
+                border-radius: .5rem;
                 // project tile
                 .project-tile {
                     // border: 3px solid $span-gold;
@@ -76,7 +76,7 @@
                         padding: 2em;
                     }
 
-                    padding: 1.5em;
+                    padding: 1.5rem 1rem;
                     flex-basis: 50%;
                     width: 100%;
                     height: 100%;
@@ -90,7 +90,7 @@
                     transition: 1.3s ease;
                     // project Title (h1)
                     h1 {
-                        font-size: 1.25rem;
+                        font-size: 1.35rem;
                         width: 100%;
                         @media (min-width:1024px){
                             font-size: 1.5rem;
@@ -100,9 +100,9 @@
                         text-transform: capitalize;
                         line-height: 1em;
                         font-family: $font-title;
-                        letter-spacing: .05em;
-                        margin-bottom: .5em;
-                        padding-bottom: .5em;
+                        letter-spacing: .05rem;
+                        margin-bottom: 1rem;
+                        padding-bottom: .5rem;
                         border-bottom: 1px dashed $span-gold;
                         
                     }
@@ -110,9 +110,9 @@
                     // project details (h2 and p)
                     h2 {
                         font-size: 1rem;
-                        line-height: 1.3;
+                        line-height: 1.5;
                         font-weight: 500;
-                        margin: .8em 0;
+                        margin: .5rem 0;
                         text-transform: capitalize;
                         color: #f4f4f4;
                         transition: .3s;
@@ -122,9 +122,9 @@
                     }
                     
                     p {
-                        font-size: 1rem;
+                        font-size: .95rem;
                         @media (min-width:768px){
-                            // font-size: .9em;
+                            font-size: 1rem;
                         }
                         font-weight: 300;
                         color: #ffff;
@@ -134,13 +134,13 @@
                     // project link icon
                     a {
                         color: $text-white;
-                        background: #161616;
+                        background: $overlay-blue-darker;
                         margin: .5em 0 .5em;
                         padding: .5em;
                         width: 100%;
                         border: none;
                         outline: none;
-                        border-radius: 5px;
+                        border-radius: .5rem;
                         transition: all .3s ease;
                         border: 2px solid $span-gold;
                         // end of project tile box shadow
@@ -148,26 +148,27 @@
                         i {
                             transition: .2s;
                             color: $span-gold;
-                            font-size: .65rem;
-                            padding: .5rem;
-                            // margin-right: .5em;
-                            margin: 1em 0 .5em 0;
+                            font-size: .8rem;
+                            padding: .5rem 0;
+                            // // margin-right: .5em;
+                            // margin: 1em 0 .5em 0;
                             // icon label (pseudo)
                             &::after {
-                                content: 'view';
-                                text-transform: lowercase;
+                                content: 'view page';
                                 // font-style: italic;
+                                font-family: $font-title;
                                 letter-spacing: .15rem;
-                                // text-transform: capitalize;
+                                text-transform: capitalize;
                                 color: $text-light;
-                                font-weight: 300;
+                                font-weight: 200;
+                                font-size: .9rem;
                                 transition: .3s;
-                                background: linear-gradient(0deg, #3f0d0d, #dc134c);
+                                background: $button-crimson;
+                                box-shadow: $box-light-top-sm;
                                 border-radius: 1rem;
-                                padding: .5em 1em;
-                                opacity: 0;
-                                box-shadow: inset 1px 1px 3px #fffa,
-                                            inset -1px -1px 3px #000a;
+                                padding: .25rem .5rem;
+                                margin-left: .5rem;
+                                opacity: 1;
                                 transition: .3s ease;
                             }
 
