--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -112,12 +112,15 @@
         
         // READ MORE ABOUT BTN
         button {
-            background: $overlay-btn;
-            color: $link-gold;
-            margin: 1em auto;
-            padding: .5rem;
+            background: $button-crimson;
+            box-shadow: $box-light-top-sm;
+            color: #fff;
+            margin: 1rem auto;
+            padding: .5em;
+            width: 10rem;
             cursor: pointer;
-            border-radius: 1rem;
+            border-radius: .5rem;
+            border: none;
             text-transform: capitalize;
             transition: .3s;
             position: relative;
@@ -131,11 +134,12 @@
                     place-items: center;
                     top: 0;
                     left: 0;
-                    border-radius: 15px;
+                    border-radius: .5rem;
                     width: 100%;
                     height: 100%;
                     opacity: 1;
-                    background: $overlay-btn-hover;
+                    box-shadow: $box-light-top-sm-hover;
+                    background: $button-crimson-hover;
                     transition: .2s;
 
                 }
