--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -165,7 +165,7 @@
                                 transition: .3s;
                                 background: $button-crimson;
                                 box-shadow: $box-light-top-sm;
-                                border-radius: 1rem;
+                                border-radius: .5rem;
                                 padding: .25rem .5rem;
                                 margin-left: .5rem;
                                 opacity: 1;
