--- a/css/style.css
+++ b/css/style.css
@@ -2535,7 +2535,9 @@ hamburger
 }
 #footer .footer form .input-div input:invalid, #footer .footer form .input-div textarea:invalid {
   background-color: #ead2a1;
+  background-color: #ddd;
   color: #000;
+  outline: none;
 }
 #footer .footer form .input-div input:focus, #footer .footer form .input-div textarea:focus {
   outline: 2px dashed #fffa;
@@ -2624,14 +2626,14 @@ hamburger
   border: 2px solid rgba(0, 0, 0, 0.5);
   background-color: #20262e;
   padding: 0.5rem 0;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   overflow: hidden;
   margin: 0.5em 0.1em 1em 0.1em;
   position: relative;
   transition: 0.3s;
 }
 #footer .footer .socialMedia-links .socialMedia-item .link-icon {
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   text-transform: capitalize;
   color: #f4f4f4;
   font-weight: 300;
@@ -2677,8 +2679,8 @@ hamburger
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 5px;
-  box-shadow: inset 2px 2px 4px #fffa, inset -2px -2px 4px #000a;
+  border-radius: 0.5rem;
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 #footer .footer .socialMedia-links .socialMedia-item a i {
   color: #fffa;
