form button padding

--- a/css/style.css
+++ b/css/style.css
@@ -2554,7 +2554,7 @@ hamburger
 }
 #footer .footer form button {
   position: relative;
-  padding: 0.7rem 1rem;
+  padding: 1rem;
   color: #eee;
   background-color: #dc143c8c;
   font-family: "Montserrat", sans-serif;
