--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -127,7 +127,7 @@
 
             button {
                 position: relative;
-                padding: .7rem 1rem;
+                padding:  1rem;
                 color: #eee;
                 background-color: $span-crimson-dark;
                 font-family: $font-content;
