--- a/css/style.css
+++ b/css/style.css
@@ -1579,9 +1579,9 @@ hamburger
   transform: preserve-3d;
 }
 #contact .contact .contact-items .contact-item h2 {
-  color: #ead2a1;
-  padding: 0.2em 0.5rem;
-  margin: 0.2em auto;
+  color: #fff;
+  padding: 0.5rem 0.5rem 0;
+  margin: 0.5rem auto;
   font-size: 1.5rem;
   width: 70%;
   font-weight: 600;
@@ -1602,6 +1602,7 @@ hamburger
   background: #20262e;
   border-radius: 50%;
   outline: 2px solid #ead2a1;
+  outline: 2px solid #fff;
   position: relative;
   display: grid;
   place-items: center;
@@ -1625,18 +1626,19 @@ hamburger
   }
 }
 #contact .contact .contact-items .contact-item .contact-info {
-  width: 90%;
+  width: 15rem;
 }
 #contact .contact .contact-items .contact-item .contact-info p {
   font-size: 0.9rem;
-  font-weight: 500;
+  font-weight: 400;
+  letter-spacing: 0.05rem;
   padding: 0.5rem;
   border: none;
   outline: none;
   border-radius: 0.5rem;
-  background: #fff;
   margin: 0.5em auto;
   color: #000;
+  color: #fff;
   transition: 0.5s ease;
   position: relative;
   z-index: -1;
@@ -1645,6 +1647,7 @@ hamburger
   display: block;
   margin-top: 0.2em;
   color: #000;
+  color: inherit;
   opacity: 0.8;
 }
 @media (min-width: 768px) {
