--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -93,9 +93,9 @@
                 // end of item box shadows
                 // item headings (h1)
                 h2 {
-                    color: $span-gold;
-                    padding: .2em .5rem;
-                    margin: .2em auto;
+                    color: #fff;
+                    padding: .5rem .5rem 0;
+                    margin: .5rem auto;
                     font-size: 1.5rem;
                     width: 70%;
                     font-weight: 600;
@@ -118,6 +118,7 @@
                     background: $overlay-blue-darker;
                     border-radius: 50%;
                     outline: 2px solid $span-gold;
+                    outline: 2px solid #fff;
                     position: relative;
                     display: grid;
                     place-items: center;
@@ -144,17 +145,19 @@
                 // of end of item icon
                 // CONTACT DETAILS
                 .contact-info {
-                    width: 90%;
+                    width: 15rem;
                     p {
                         font-size: .9rem;
-                        font-weight: 500;
+                        font-weight: 400;
+                        letter-spacing: .05rem;
                         padding: .5rem;
                         border: none;
                         outline: none;
                         border-radius: .5rem;
-                        background: $background-light;
+                        // background: $background-light;
                         margin: .5em auto;
                         color: $text-black;
+                        color: #fff;
                         transition: .5s ease;
                         position: relative;
                         z-index: -1;
@@ -163,6 +166,7 @@
                             display: block;
                             margin-top: .2em;
                             color: $text-black;
+                            color: inherit;
                             opacity: .8;
                         }
                         
