social media links no border

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -185,7 +185,7 @@
             }
             grid-template-columns: 1fr;
             background-color: $overlay-blue-dark;
-            border: 1px solid $span-gold;
+            // border: 1px solid $span-gold;
             // border-radius: 0;
             width: 100%;
             margin: 2em 5vw;
