--- a/css/style.css
+++ b/css/style.css
@@ -685,6 +685,15 @@ hamburger
   height: 100%;
   object-fit: cover;
   z-index: -1;
+  animation: intro 8s linear 2s;
+}
+@keyframes intro {
+  0% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 #home .hero #hero-h1 {
   background: transparent;
@@ -3032,11 +3041,12 @@ body .loader_bg {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #000;
   z-index: 100;
   display: grid;
   place-items: center;
+  overflow: hidden;
 }
 body .loader_bg .loader {
   border: 1rem solid #ead2a1;
