--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -61,6 +61,15 @@
                 height: 100%;
                 object-fit: cover;
                 z-index: -1;
+                animation: intro 8s linear 2s;
+                @keyframes intro {
+                    0% {
+                        transform: scale(1.5);
+                    }
+                    100% {
+                        transform: scale(1);
+                    }
+                }
             }
         }
         // ANIMATED INTRO
