--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,11 +34,12 @@ body {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background-color: #000;
         z-index: 100;
         display: grid;
         place-items: center;
+        overflow: hidden;
 
         .loader {
             border: 1rem solid $span-gold;
