--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -12,6 +12,7 @@
         background-position: center left;
         background-position: 10% 50%;
         background-attachment: fixed;
+        animation: desktopIntro 8s linear 4s ;
         &::after {
                 position: absolute;
                 content: '';
@@ -21,6 +22,16 @@
                 height: 100%;
                 z-index: -1;
                 background: radial-gradient(transparent, #000);
+        }
+
+        @keyframes desktopIntro {
+            0% {
+                background-position: 5% 40%;
+            }
+
+            100% {
+                background-position: 10% 50%;
+            }
         }
     }
     
