--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -75,7 +75,8 @@
                 animation: intro 8s linear 2s;
                 @keyframes intro {
                     0% {
-                        transform: scale(1.5);
+                        // transform: scale(1.5);
+                        transform: scale(3);
                     }
                     100% {
                         transform: scale(1);
