--- a/css/style.css
+++ b/css/style.css
@@ -3096,6 +3096,17 @@ body .loader_bg .loader::before {
     opacity: 0;
   }
 }
+body .loader_bg p {
+  position: absolute;
+  color: #ead2a1;
+  bottom: 0vh;
+  left: 50%;
+  transform: translateX(-50%) translateY(20vh);
+  text-align: center;
+  text-transform: capitalize;
+  width: 20rem;
+  font-size: 1.5rem;
+}
 body a {
   text-decoration: none;
 }
