test hero aniamtion timing

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -72,7 +72,7 @@
                 height: 100%;
                 object-fit: cover;
                 z-index: -1;
-                animation: intro 8s linear 2s;
+                animation: intro 5s ease-out 4s;
                 @keyframes intro {
                     0% {
                         // transform: scale(1.5);
@@ -129,7 +129,7 @@
                     line-height: 1.3;
                     animation: hero-span 5s ease-in-out;
                     animation-fill-mode: forwards;
-                    animation-delay: calc(10s + .5s * var(--s));
+                    animation-delay: calc(8s + .5s * var(--s));
                     transition: 1s;
                     transform-style: preserve-3d;
                     @media (min-width: 768px) {
@@ -154,7 +154,7 @@
                         position: relative;
                         display: inline-block;
                         animation: aka 5s ease alternate;
-                        animation-delay: 13s;
+                        animation-delay: 11s;
                         animation-fill-mode: forwards;
                         color: #ddd;
                         opacity: 0;
@@ -196,7 +196,7 @@
             opacity: 0;
             transform: translateX(-10vw);
             transform-style: preserve-3d;
-            animation: show-cta 3s ease-in-out 14s;
+            animation: show-cta 3s ease-in-out 12s;
             animation-fill-mode: forwards;
             transition: .3s linear;
             cursor: pointer;
