--- a/css/style.css
+++ b/css/style.css
@@ -632,6 +632,9 @@ hamburger
 }
 
 #home {
+  background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
+  background-position: left;
+  background-size: cover;
   padding: 0;
   min-height: 100vh;
   position: relative;
@@ -670,6 +673,7 @@ hamburger
   position: relative;
 }
 #home .hero .hero-bg {
+  display: none;
   position: absolute;
   position: relative;
   width: 100vw;
@@ -735,7 +739,7 @@ hamburger
   line-height: 1.3;
   animation: hero-span 5s ease-in-out;
   animation-fill-mode: forwards;
-  animation-delay: calc(8s + .5s * var(--s));
+  animation-delay: calc(5.5s + .5s * var(--s));
   transition: 1s;
   transform-style: preserve-3d;
   /* HERO H1 INTRO ANIMATION */
@@ -759,7 +763,7 @@ hamburger
   position: relative;
   display: inline-block;
   animation: aka 5s ease alternate;
-  animation-delay: 11s;
+  animation-delay: 8.5s;
   animation-fill-mode: forwards;
   color: #ddd;
   opacity: 0;
@@ -787,7 +791,7 @@ hamburger
   opacity: 0;
   transform: translateX(-10vw);
   transform-style: preserve-3d;
-  animation: show-cta 3s ease-in-out 12s;
+  animation: show-cta 3s ease-in-out 9.5s;
   animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
