--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,11 +1,15 @@
 // HERO
 #home {
+    background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
+    background-position: left;
+    background-size: cover;
     padding: 0;
     min-height: 100vh;
     // background-color: $overlay-blue-dark;
     position: relative;
     z-index: 1;
     overflow: hidden;
+
     // DESKTOP HERO IMAGE
     @media (min-width: 1024px){
         background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
@@ -42,6 +46,7 @@
         
         // HERO IMAGE CONTAINER WITH OVERLAY BLEND MODE
         .hero-bg {
+                display: none;
             @media (min-width: 1024px){
                 display: none;
             
@@ -129,7 +134,7 @@
                     line-height: 1.3;
                     animation: hero-span 5s ease-in-out;
                     animation-fill-mode: forwards;
-                    animation-delay: calc(8s + .5s * var(--s));
+                    animation-delay: calc(5.5s + .5s * var(--s));
                     transition: 1s;
                     transform-style: preserve-3d;
                     @media (min-width: 768px) {
@@ -154,7 +159,7 @@
                         position: relative;
                         display: inline-block;
                         animation: aka 5s ease alternate;
-                        animation-delay: 11s;
+                        animation-delay: 8.5s;
                         animation-fill-mode: forwards;
                         color: #ddd;
                         opacity: 0;
@@ -196,7 +201,7 @@
             opacity: 0;
             transform: translateX(-10vw);
             transform-style: preserve-3d;
-            animation: show-cta 3s ease-in-out 12s;
+            animation: show-cta 3s ease-in-out 9.5s;
             animation-fill-mode: forwards;
             transition: .3s linear;
             cursor: pointer;
