--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,7 +1,7 @@
 // HERO
 #home {
     background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
-    background-position: left;
+    background-position: 15%;
     background-size: cover;
     padding: 0;
     min-height: 100vh;
@@ -9,7 +9,18 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
-
+    @media (max-width: 820px){
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(120deg, rgba(0, 0, 0, .5) 70%, transparent);
+            z-index: -1;
+        }
+    }
     // DESKTOP HERO IMAGE
     @media (min-width: 1024px){
         background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
