--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -111,7 +111,7 @@
             // overflow-y: hidden;
             width: max-content;
             text-transform: capitalize;
-            top: 15vh;
+            top: 10vh;
             left: 5vw;
 
             @media (min-width: 600px) {
@@ -202,11 +202,12 @@
             
             padding: .5em 2rem .5rem 1rem;
             margin: 1rem 0;
+            margin: 15vh 0 1rem;
             width: auto;
             width:max-content;
             border-radius: 1rem;
-            border-top-right-radius: 5rem;
-            border-bottom-right-radius: 1rem;
+            // border-top-right-radius: 5rem;
+            // border-bottom-right-radius: 1rem;
             border: none;
             outline: none;
             opacity: 0;
@@ -244,8 +245,8 @@
                 width: 100%;
                 height: 100%;
                 border-radius: 1rem;
-                border-top-right-radius: 5rem;
-                border-bottom-right-radius: 1rem;
+                // border-top-right-radius: 5rem;
+                // border-bottom-right-radius: 1rem;
                 transition: .3s ease;
                 border: none;
                 outline: none;
