--- a/css/style.css
+++ b/css/style.css
@@ -632,16 +632,18 @@ hamburger
 }
 
 #home {
-  background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
-  background-position: 15%;
-  background-size: cover;
   padding: 0;
   min-height: 100vh;
   position: relative;
   z-index: 1;
   overflow: hidden;
 }
-@media (max-width: 820px) {
+@media (max-width: 1024px) {
+  #home {
+    background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg");
+    background-position: 15%;
+    background-size: cover;
+  }
   #home::after {
     content: "";
     position: absolute;
