--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -6,21 +6,21 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
-    @media (max-width: 1024px){
-    background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg');
-        background-position: 15%;
-        background-size: cover;
-        &::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(120deg, rgba(0, 0, 0, .5) 70%, transparent);
-            z-index: -1;
-        }
-    }
+    // @media (max-width: 1024px){
+    // background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg');
+    //     background-position: 15%;
+    //     background-size: cover;
+    //     &::after {
+    //         content: '';
+    //         position: absolute;
+    //         top: 0;
+    //         left: 0;
+    //         width: 100%;
+    //         height: 100%;
+    //         background: linear-gradient(120deg, rgba(0, 0, 0, .5) 70%, transparent);
+    //         z-index: -1;
+    //     }
+    // }
     // DESKTOP HERO IMAGE
     @media (min-width: 1024px){
         background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
@@ -57,7 +57,6 @@
         
         // HERO IMAGE CONTAINER WITH OVERLAY BLEND MODE
         .hero-bg {
-                display: none;
             @media (min-width: 1024px){
                 display: none;
             
@@ -88,11 +87,11 @@
                 height: 100%;
                 object-fit: cover;
                 z-index: -1;
-                animation: intro 5s ease-out 4s;
+                // animation: intro 3s ease-out 4s;
                 @keyframes intro {
                     0% {
                         // transform: scale(1.5);
-                        transform: scale(2.5);
+                        transform: scale(2);
                     }
                     100% {
                         transform: scale(1);
@@ -202,7 +201,7 @@
             
             padding: .5em 2rem .5rem 1rem;
             margin: 1rem 0;
-            margin: 10vh 0 1rem;
+            margin: 5vh 0 1rem;
             width: auto;
             width:max-content;
             border-radius: 1rem;
@@ -324,6 +323,7 @@
                 &:hover {
                     transition: .2s;
                     transform: scale(.95);
+                    border-top-right-radius: 5rem;
 
                     &::before {
                         border-top-right-radius: 5rem;
