--- a/css/style.css
+++ b/css/style.css
@@ -697,10 +697,11 @@ hamburger
   height: 100%;
   object-fit: cover;
   z-index: -1;
+  animation: intro 6s ease-out 2s;
 }
 @keyframes intro {
   0% {
-    transform: scale(2);
+    transform: scale(2.5);
   }
   100% {
     transform: scale(1);
