--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -87,11 +87,11 @@
                 height: 100%;
                 object-fit: cover;
                 z-index: -1;
-                // animation: intro 3s ease-out 4s;
+                animation: intro 6s ease-out 2s;
                 @keyframes intro {
                     0% {
                         // transform: scale(1.5);
-                        transform: scale(2);
+                        transform: scale(2.5);
                     }
                     100% {
                         transform: scale(1);
