--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -356,7 +356,7 @@
                 text-align: left;
                 a {
                     color: $span-gold;
-                    text-decoration: underline;
+                    // text-decoration: underline;
                 }
             }
             // DESKTOP SLOGAN
