work repo links

--- a/css/style.css
+++ b/css/style.css
@@ -2071,11 +2071,11 @@ hamburger
   border: none;
   outline: none;
   background: #dc143c8c;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   color: #f4f4f4;
   padding: 0.7rem 0.5rem;
   text-transform: capitalize;
-  margin: 0 auto;
+  margin: 0 auto 0.5rem;
   display: block;
   text-align: center;
   text-decoration: none;
@@ -2092,7 +2092,7 @@ hamburger
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   transition: 0.2s;
   z-index: -1;
 }
@@ -2129,6 +2129,73 @@ hamburger
     opacity: 0;
   }
   #work .work-items .work-item .view-site-btn:active::after {
+    opacity: 1;
+  }
+}
+#work .work-items .work-item .view-repo-btn {
+  display: block;
+  margin: 0 auto;
+  padding: 0.7rem 0.5rem;
+  width: 15rem;
+  border: none;
+  outline: none;
+  background: #f4f4f4;
+  color: #dc143c;
+  font-weight: 500;
+  text-transform: capitalize;
+  text-align: center;
+  text-decoration: none;
+  text-decoration: underline;
+  border-radius: 0.5rem;
+  transition: 0.2s;
+  letter-spacing: 0.05rem;
+  position: relative;
+  isolation: isolate;
+}
+#work .work-items .work-item .view-repo-btn::before, #work .work-items .work-item .view-repo-btn::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  transition: 0.2s;
+  z-index: -1;
+}
+#work .work-items .work-item .view-repo-btn::before {
+  background: linear-gradient(0deg, #ddd, #f4f4f4);
+}
+#work .work-items .work-item .view-repo-btn::after {
+  background: linear-gradient(0deg, #f4f4f4, #ddd);
+  opacity: 0;
+}
+@media (min-width: 820px) {
+  #work .work-items .work-item .view-repo-btn {
+    width: 13rem;
+  }
+  #work .work-items .work-item .view-repo-btn:hover {
+    transform: scale(0.95);
+    letter-spacing: normal;
+    text-decoration: none;
+  }
+  #work .work-items .work-item .view-repo-btn:hover::before {
+    opacity: 0;
+  }
+  #work .work-items .work-item .view-repo-btn:hover::after {
+    opacity: 1;
+  }
+}
+@media (max-width: 820px) {
+  #work .work-items .work-item .view-repo-btn:active {
+    transform: scale(0.95);
+    letter-spacing: normal;
+    text-decoration: none;
+  }
+  #work .work-items .work-item .view-repo-btn:active::before {
+    opacity: 0;
+  }
+  #work .work-items .work-item .view-repo-btn:active::after {
     opacity: 1;
   }
 }
