--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -81,11 +81,11 @@
                 border: none;
                 outline: none;
                 background: $span-crimson-dark;
-                border-radius: 5px;
+                border-radius: .5rem;
                 color: $text-light;
                 padding: .7rem .5rem;
                 text-transform: capitalize;
-                margin: 0 auto;
+                margin: 0 auto .5rem;
                 display: block;
                 text-align: center;
                 text-decoration: none;
@@ -103,7 +103,7 @@
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    border-radius: 5px;
+                    border-radius: .5rem;
                     transition: .2s;
                     z-index: -1;
                 }
@@ -138,7 +138,73 @@
                     }
                 }
             }
-
+            .view-repo-btn {
+                // border: 1px solid blue;
+                display: block;
+                margin: 0 auto;
+                padding: .7rem .5rem;
+                width: 15rem;
+                border: none;
+                outline: none;
+                background: #f4f4f4;
+                color: $span-crimson;
+                font-weight: 500;
+                text-transform: capitalize;
+                text-align: center;
+                text-decoration: none;
+                text-decoration: underline;
+                border-radius: .5rem;
+                transition: .2s;
+                letter-spacing: .05rem;
+                position: relative;
+                isolation: isolate;
+                
+                // BUTTON PSEUDO SHADOWS AND BG
+                &::before, &::after {
+                    position: absolute;
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: .5rem;
+                    transition: .2s;
+                    z-index: -1;
+                }
+                &::before {
+                    background: linear-gradient(0deg, #ddd, #f4f4f4);
+                    // border: .12rem solid $span-crimson;
+                    // box-shadow: $box-light-top-sm;
+                }
+                &::after {
+                    background: linear-gradient(0deg, #f4f4f4, #ddd);
+                    // box-shadow: $box-light-top-sm-hover;
+                    opacity: 0;
+                }
+                
+                // HOVER AND ACTIVE MEDIA QUERY
+                // DESKTOP HOVER STATE
+                @media (min-width: 820px){
+                    width: 13rem;
+                    &:hover {
+                        transform: scale(.95);
+                        letter-spacing: normal;
+                        text-decoration: none;
+                        &::before {opacity: 0;}
+                        &::after {opacity: 1;}
+                    }
+                }
+                // MOBILE ACTIVE CLASS
+                @media (max-width: 820px){
+                    &:active {
+                        transform: scale(.95);
+                        letter-spacing: normal;
+                        text-decoration: none;
+                        &::before {opacity: 0;}
+                        &::after {opacity: 1;}
+                    }
+                }
+            }
             p {
                 text-align: center;
                 
