--- a/css/style.css
+++ b/css/style.css
@@ -697,7 +697,7 @@ hamburger
   height: 100%;
   object-fit: cover;
   z-index: -1;
-  animation: intro 6s ease-out 2s;
+  animation: intro 6s ease-out 3s;
 }
 @keyframes intro {
   0% {
@@ -735,7 +735,7 @@ hamburger
   line-height: 1.3;
   animation: hero-span 5s ease-in-out;
   animation-fill-mode: forwards;
-  animation-delay: calc(5.5s + .5s * var(--s));
+  animation-delay: calc(6.5s + .5s * var(--s));
   transition: 1s;
   transform-style: preserve-3d;
   /* HERO H1 INTRO ANIMATION */
@@ -2305,7 +2305,7 @@ hamburger
   box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
   color: #fff;
   margin: 1rem auto;
-  padding: 0.5em;
+  padding: 0.7rem;
   width: 10rem;
   cursor: pointer;
   border-radius: 0.5rem;
@@ -2360,6 +2360,7 @@ hamburger
   z-index: 1;
   font-size: 0.96rem;
   font-family: "Montserrat", sans-serif;
+  color: #29323c;
 }
 .about .col-right .article-container article.about-article p#intro::first-letter {
   font-size: 2.5em;
@@ -2377,11 +2378,14 @@ hamburger
 .about .col-right .article-container article.about-article p.about-body {
   transition: opacity 0.5s ease;
   opacity: 0;
+  font-weight: 300;
+  color: #000;
+  font-size: 0.95rem;
   margin-bottom: 0.5em;
 }
 @media (min-width: 768px) {
   .about .col-right .article-container article.about-article p {
-    font-size: 1em;
+    font-size: 1rem;
   }
 }
 .about .col-right .article-container article.about-article p .fcc-link {
