--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -116,7 +116,7 @@
             box-shadow: $box-light-top-sm;
             color: #fff;
             margin: 1rem auto;
-            padding: .5em;
+            padding: .7rem;
             width: 10rem;
             cursor: pointer;
             border-radius: .5rem;
@@ -182,6 +182,7 @@
                         z-index: 1;
                         font-size: .96rem;
                         font-family: $font-content;
+                        color: $overlay-blue-dark;
 
 
                         &#intro::first-letter {
@@ -202,6 +203,9 @@
                         &.about-body {
                             transition: opacity .5s ease;
                             opacity: 0;
+                            font-weight: 300;
+                            color: #000;
+                            font-size: .95rem;
                             // display: none;
                             margin-bottom: .5em;
                             // color: $span-gold;
@@ -209,7 +213,7 @@
                         }
 
                         @media (min-width:768px) {
-                            font-size: 1em;
+                            font-size: 1rem;
                         }
 
                         .fcc-link {
