--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -263,9 +263,9 @@
                     background: $overlay-btn;
                     color: $span-gold;
                     margin: 0 auto;
-                    padding: 1em;
-                    box-shadow: inset 3px 0px 3px #c7c7c7aa,
-                    inset -3px -3px 3px #000a;
+                    padding: 1rem;
+                    box-shadow: inset 3px 0px 3px rgba(255, 255, 255, 0.3),
+                    inset -3px -3px 3px rgba(0,0,0,.3);
                     text-transform: capitalize;
                     border-bottom-left-radius: 5px;
                     border-bottom-right-radius: 5px;
