--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,27 @@ hamburger
   opacity: 1;
   transform: translateY(15vh);
   z-index: 30;
+  isolation: isolate;
+}
+.top-link::before, .top-link::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.25rem;
+  transition: 0.25s;
+  z-index: -1;
+}
+.top-link::before {
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+}
+.top-link::after {
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  opacity: 0;
 }
 .top-link i {
   color: #ddd;
@@ -196,6 +216,30 @@ hamburger
   opacity: 1;
   transform: translateY(0);
   transition: 1.5s;
+}
+@media (max-width: 768px) {
+  .top-link.show-link:active {
+    transition: 0.2s;
+    transform: translateY(0) scale(0.95);
+  }
+  .top-link.show-link:active::before {
+    opacity: 0;
+  }
+  .top-link.show-link:active::after {
+    opacity: 1;
+  }
+}
+@media (min-width: 768px) {
+  .top-link.show-link:hover {
+    transition: 0.2s;
+    transform: translateY(0) scale(0.95);
+  }
+  .top-link.show-link:hover::before {
+    opacity: 0;
+  }
+  .top-link.show-link:hover::after {
+    opacity: 1;
+  }
 }
 @keyframes bounce {
   0% {
@@ -216,10 +260,6 @@ hamburger
     transform: scale(0.97);
     transition: 0.2s;
   }
-}
-.top-link:active {
-  transform: scale(0.9);
-  transition: 0.2s;
 }
 
 .btn {
