header brand text

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -81,6 +81,7 @@
                     }
 
                     text-transform: uppercase;
+                    text-transform: capitalize;
                     color: #f4f4f4;
                     color: $span-gold;
                     background-color: $overlay-blue-darker;
