--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,7 @@ hamburger
 #header .header #navbar .brand h1 {
   font-size: 1rem;
   text-transform: uppercase;
+  text-transform: capitalize;
   color: #f4f4f4;
   color: #ead2a1;
   background-color: #20262e;
