--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,66 @@ hamburger
   opacity: 0;
 }
 
+.loader_bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  z-index: 100;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+.loader_bg .loader {
+  border: 1rem solid #ead2a1;
+  border: none;
+  height: 3.5rem;
+  width: 3.5rem;
+  border-radius: 50%;
+  position: relative;
+}
+.loader_bg .loader::before, .loader_bg .loader::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0.25rem solid #ead2a1;
+  border-radius: 50%;
+  opacity: 0;
+  animation: loader 2s linear infinite;
+}
+.loader_bg .loader::before {
+  animation-delay: 0.5s;
+}
+@keyframes loader {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+.loader_bg p {
+  position: absolute;
+  color: #ead2a1;
+  bottom: 0vh;
+  left: 50%;
+  transform: translateX(-50%) translateY(20vh);
+  text-align: center;
+  text-transform: capitalize;
+  width: 20rem;
+  font-size: 1.5rem;
+}
+
 #header {
   position: fixed;
   z-index: 50;
@@ -3156,65 +3216,6 @@ body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
   width: 100%;
-}
-body .loader_bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #000;
-  z-index: 100;
-  display: grid;
-  place-items: center;
-  overflow: hidden;
-}
-body .loader_bg .loader {
-  border: 1rem solid #ead2a1;
-  border: none;
-  height: 3.5rem;
-  width: 3.5rem;
-  border-radius: 50%;
-  position: relative;
-}
-body .loader_bg .loader::before, body .loader_bg .loader::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 2px solid #ead2a1;
-  border-radius: 50%;
-  opacity: 0;
-  animation: loader 2s linear infinite;
-}
-body .loader_bg .loader::before {
-  animation-delay: 0.5s;
-}
-@keyframes loader {
-  0% {
-    transform: scale(0);
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 0;
-  }
-}
-body .loader_bg p {
-  position: absolute;
-  color: #ead2a1;
-  bottom: 0vh;
-  left: 50%;
-  transform: translateX(-50%) translateY(20vh);
-  text-align: center;
-  text-transform: capitalize;
-  width: 20rem;
-  font-size: 1.5rem;
 }
 body a {
   text-decoration: none;
