--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -107,7 +107,6 @@
 
                 }
             }
-            // hamburger nav style
             .nav-list {
                 // MOBILE NAV CONTAINER
                 .links-container {
@@ -273,7 +272,7 @@
                         display: flex;
                         // border: 1px solid red;
                         align-items: center;
-                        opacity: .5;
+                        opacity: .8;
                         &:hover {
                             opacity: 1;
                         }
@@ -348,15 +347,21 @@
                     // end of remove hamburger from desktop view
                     ul {
                         display: flex;
+                        justify-content: flex-end;
+                        align-items: center;
+                        gap: .5rem;
                         height: auto;
                         width: fit-content;
+                        width: 50vw;
+                        // overflow: hidden;
                         background-color: transparent;
+                        // border: 1px solid red;
 
                         li {
                             position: relative;
                             display: flex;
-                            margin-right: .5rem;
-
+                            // margin-right: .5rem;
+                            // border: 2px solid yellow;
                             // list item underline
                             &::before {
                                 position: absolute;
@@ -380,8 +385,8 @@
                             // end of list item underline
                             
                             a {
-                                font-size: .95rem;
-                                padding: .5rem;
+                                font-size: .9rem;
+                                padding: .25rem;
                                 font-weight: 400;
                                 margin: 0 auto;
                                 display: block;
