--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -35,7 +35,7 @@ $trans-border: rgba(255, 255, 255, 0.155);
 $link-gold: #ead2a1;
 $link-blue: skyblue;
 $link-crimson: #dc143c;
-$link-crimson-dark:#b60f30;
+$dark-crimson:#b60f30;
 // background colors
 $background-light: #fff;
 $background-gray: #f4f4f4;
